Fix issues with alignment, phone video not working

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,7 @@ body {
 
 h1 {
     font-size: 50px;
+    font-weight: 400;
     color: white;
     text-align: center;
 }
@@ -13,6 +14,8 @@ h1 {
 h2 {
     font-size: 42px;
     font-weight: 300;
+    color: white;
+    text-align: center;
 }
 
 span {
